--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <main>
       <section id="login">
-        <div id="imagem">Foto</div>
+        <div id="imagem"><!--Aqui terá a imagem nas CSS--></div>
         <div id="formulario">
           <h1>Login</h1>
           <p>
