--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
                   <input type="email" name="login" id="ilogin" placeholder="seu e-mail" autocomplete="email" required maxlength="30">
                   <label for="ilogin">login</label>
             </div>
-            <div>
+            <div class="campo">
                   <span id="burguer" class="material-symbols-outlined">vpn_key</span>
                   <input type="password" name="senha" id="isenha" placeholder="sua senha" autocomplete="current-password" required minlength="8">
                   <label for="isenha">Senha</label>
             </div>
             <input type="submit" value="Entrar">
-            <a href="esqueci.html">Esqueci a senha <span id="burguer" class="material-symbols-outlined">mail</span></a>
+            <a href="esqueci.html" class="botao">Esqueci a senha <span id="burguer" class="material-symbols-outlined">mail</span></a>
           </form>
         </div>
       </section>
