--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
-    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="estilos/style.css" />
-    <link rel="stylesheet" href="estilos/media-query.css">
+    <link rel="stylesheet" href="estilos/media-query.css" />
   </head>
   <body>
     <main>
@@ -19,19 +22,41 @@
             poder fazer as configurações no seu ambiente.
           </p>
           <form action="login.php" method="post" autocomplete="on">
- 
             <div class="campo">
-                  <span id="burguer" class="material-symbols-outlined">person</span>
-                  <input type="email" name="login" id="ilogin" placeholder="seu e-mail" autocomplete="email" required maxlength="30">
-                  <label for="ilogin">login</label>
+              <span id="burguer" class="material-symbols-outlined">person</span>
+              <input
+                type="email"
+                name="login"
+                id="ilogin"
+                placeholder="seu e-mail"
+                autocomplete="email"
+                required
+                maxlength="30"
+              />
+              <label for="ilogin">login</label>
             </div>
             <div class="campo">
-                  <span id="burguer" class="material-symbols-outlined">vpn_key</span>
-                  <input type="password" name="senha" id="isenha" placeholder="sua senha" autocomplete="current-password" required minlength="8">
-                  <label for="isenha">Senha</label>
+              <span id="burguer" class="material-symbols-outlined"
+                >vpn_key</span
+              >
+              <input
+                type="password"
+                name="senha"
+                id="isenha"
+                placeholder="sua senha"
+                autocomplete="current-password"
+                required
+                minlength="8"
+              />
+              <label for="isenha">Senha</label>
             </div>
-            <input type="submit" value="Entrar">
-            <a href="esqueci.html" class="botao">Esqueci a senha <span id="burguer" class="material-symbols-outlined">mail</span></a>
+            <input type="submit" value="Entrar" />
+            <a href="esqueci.html" class="botao"
+              >Esqueci a senha
+              <span id="burguer" class="material-symbols-outlined"
+                >mail</span
+              ></a
+            >
           </form>
         </div>
       </section>
